Fix more linked files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <title>Jet Yeh's</title>
       <meta name="description" content="Play free unblocked games anytime and anywhere! Enjoy a wide selection of fun, exciting, and safe games for school or work" />
-      <link rel="icon" href="img/favicon-32x32.png" />
+      <link rel="icon" href="/img/favicon-32x32.png" />
       <link rel="stylesheet" href="/css/style.css" />
       <link rel="stylesheet" href="/css/index.css" />
       <link rel="stylesheet" href="/css/gameGrid.css" />
@@ -28,7 +28,7 @@
             </ul>
 
             <div class="left-col">
-               <img title="icon" src="img/icon.png" width="199px" />
+               <img title="icon" src="/img/icon.png" width="199px" />
             </div>
             <div>
                <center>
@@ -48,10 +48,10 @@
                      <div class="title">Jet Yeh's Unblocked Games</div>
                   </h1>
                   <div class="right-col">
-                     <img title="music_icon" id="icon" src="img/play.png" />
+                     <img title="music_icon" id="icon" src="/img/play.png" />
                   </div>
                   <audio id="mySong">
-                     <source src="/media/beet-juice.mp4" type="audio/ogg" />
+                     <source src="/media/beet-juice.mp4" type="/audio/ogg" />
                   </audio>
                </header>
                <br />
